crates/crucible-cli/src/tui/components/snapshots/crucible_cli__tui__components__input_box__tests__snapshot_tests__input_box_long_wrap.snap
---
source: crates/crucible-cli/src/tui/components/input_box.rs
expression: terminal.backend()
---
" > This is a very long input that exceeds the typical width and should handle wr"
"   apping gracefully without breaking the layout                                "
"                                                                                "
