crates/crucible-cli/src/tui/components/snapshots/crucible_cli__tui__components__input_box__tests__snapshot_tests__input_box_repl_prefix.snap
---
source: crates/crucible-cli/src/tui/components/input_box.rs
expression: terminal.backend()
---
"                                                                                "
" : quit                                                                         "
"                                                                                "
